--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<div id="container">
 
-    <h2><i class="fas fa-eraser"></i> Erasure</h2>
+    <h2><i class="fas fa-eraser"></i> Erasure New</h2>
 
     <h5 id="source-label">Source:</h5>
     <input type="file" id="btn-upload" name="files[]" multiple />
