--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<div id="container">
 
-    <h2><i class="fas fa-eraser"></i> Erasure New</h2>
+    <h2><i class="fas fa-eraser"></i> Erasure</h2>
 
     <h5 id="source-label">Source:</h5>
     <input type="file" id="btn-upload" name="files[]" multiple />
@@ -28,7 +28,7 @@
 
 	</div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" charset="utf-8"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" charset="utf-8"></script>
 <script src="https://unpkg.com/compromise@latest/builds/compromise.min.js"></script>
 <script src="main.js" charset="utf-8"></script>
 
