adding textarea resize

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div contenteditable="true" id="source-text">Upload a file or click to edit this text</div>
 
     <p>Enter a word or a comma-separated group of words and click ERASE.</p>
-    <textarea id="erase-text" placeholder="the, in, of"></textarea>
+		<textarea rows="1"id="erase-text" placeholder="the, in, of"></textarea>
     <button id="btn-erase"><i class="fas fa-eraser"></i> Erase</button>
     <button id="btn-reset"><i class="fas fa-redo"></i> Reset</button>
 
@@ -29,7 +29,8 @@
 	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" charset="utf-8"></script>
-<script src="https://unpkg.com/compromise@latest/builds/compromise.min.js"></script>
+<script src="https://unpkg.com/compromise@latest/builds/compromise.min.js" charset="utf-8"></script>
+<script src="https://j11y.io/demos/plugins/jQuery/autoresize.jquery.js" charset="utf-8"></script>
 <script src="main.js" charset="utf-8"></script>
 
 </body>
